--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   </table>
 
   <hr>
-  <a href="/Users/tanieadas/Desktop/Web Development/html - personal site/contact-form.html"><u>Contact here</u> </a>
+  <a href="contact-form.html"><u>Contact here</u> </a>
 </body>
 
 </html>
